src/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
* {
  padding: 0;
  margin: 0;
  font-family: "Poppins", sans-serif;
}

:root {
  --primary-color: #1e1e20;
  --secondary-color: #252529;
  --tertiary-color: #ffffff;
}
/* #1E1E20 */
/* #252529 */
/* #181A1B */
/* #021E34 */
/* #bf6f13 */
/* #e88e27 */
/* #0c2f49 */
body {
  background-color: var(--primary-color);
}
.header {
  background-color: var(--secondary-color);
  height: 100px;
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin-bottom: 30px;
}

.header h2 {
  display: inline-block;
  color: var(--tertiary-color);
  font-family: Helvetica;
  font-weight: 600;
}

nav ul {
  display: flex;
}
nav ul li {
  list-style: none;
  margin-right: 1rem;
}

nav ul li a {
  text-decoration: none;
  color: white;
  font-size: 1.2rem;
  font-weight: bold;
  padding: 0.2rem 0.8rem;
  position: relative;
}
nav ul li a::before {
  content: "";
  position: absolute;
  top: -10px;
  left: 50%;
  height: 3px;
  width: 0;
  transform: translateX(-50%);
  background-color: var(--tertiary-color);
  transition: all 0.2s ease-in-out;
}
nav ul li a:hover:before {
  width: 100%;
}
nav ul li a:focus {
  background-color: white;
  color: var(--primary-color);
  opacity: 0.2px;
  border-radius: 20px;
}
nav ul li a:focus:before {
  width: 0%;
}

/* nav ul li a {
  cursor: pointer;
} */
.search-btn {
  display: flex;
}
.inputText {
  outline: none;
  border: 1px solid var(--primary-color);
  border-radius: 2rem 0 0 2rem;
  padding: 0.3rem 1rem;
  font-size: 1rem;
  color: white;
  background-color: var(--primary-color);
  box-shadow: inset 0 5px 10px var(--secondary-color);
}
.inputText::placeholder {
  color: white;
}
.search-btn button {
  background-color: var(--secondary-color);
  box-shadow: inset 0 5px 10px var(--primary-color);
  padding: 0.2rem 0.5rem;
  border-radius: 0 2rem 2rem 0;
  color: white;
  font-size: 1rem;
  outline: none;
  border: 1px solid var(--primary-color);
}
.container {
  margin: auto;
  width: 80%;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}
.movie {
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
  width: 250px;
  background-color: var(--secondary-color);
  margin: 1rem;
  border-radius: 5px;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
}
.movie .poster {
  width: 100%;
  height: 250px;
}
.movie-details {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: white;
}
.movie-details .box {
  width: 100%;
  padding: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-around;
}
.movie-details .title {
  width: 160px;
  font-size: 15px;
  text-align: center;
}
.movie-details .overview {
  position: absolute;
  left: 0;
  bottom: 0;
  max-height: 100%;
  background-color: var(--secondary-color);
  opacity: 0.9;
  color: white;
  box-sizing: border-box;
  padding: 1rem;
  transition: all 0.4s ease-in-out;
  overflow-y: auto;
  transform: translateY(101%);
}
.movie-details:hover .overview {
  transform: translateY(0%);
}
.rating {
  background-color: white;
  color: var(--primary-color);
  width: 35px;
  height: 35px;
  border-radius: 50%;
  /* display: flex; */
  /* justify-content: center; */
  /* align-items: center; */
  font-weight: bold;
  border: 1px solid var(--primary-color);
  box-shadow: inset 0 5px 5px rgba(0, 0, 0, 0.5);
  padding: 10px 0 0 13px;
  /* position: absolute; */
  /* right: 5px; */
  /* bottom: 5px; */
}
@media (max-width: 900px) {
  .header {
    background-color: var(--secondary-color);
    height: 180px;
  }
  nav {
    display: flex;
    flex-direction: row;
  }
  nav ul {
    display: flex;
    flex-direction: row;
  }
  nav ul li {
    padding-top: 10px;
  }
  .search-btn {
    width: 200px;
    margin-right: 100px;
  }
}

.notfound {
  color: white;
  font-size: 40px;
  font-weight: bold;
}

